# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.MD  glad.c  log.md  main.cpp  vertexShader.vs
include/glad/: glad.h
include/shader/: Shader.cpp  Shader.h
lib/: glfw3.lib
src/shaders/: fragmentShader.fs  vertexShader.vs
